# codemindai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: e2e.yml
apps/api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 786118880f25_embeddings_384_dim.py  b0f90ac146a6_analysis_runs_and_findings.py  b817577ee5c1_finding_explanations.py  c2da1df6d998_initial_schema.py  c4a1f7d8e2b3_symbol_relationships_confidence.py  d5b2e9f1a4c7_proposed_changes.py  e6c3a8d2f9b1_pr_reviews.py
apps/api/scripts/: export_openapi.py
apps/api/src/codemind_api/: config.py  db.py  deps.py  main.py  providers.py  repository_index_utils.py  security.py
apps/api/src/codemind_api/routers/: architecture.py  ask.py  auth.py  files.py  finding_explanations.py  findings.py  github.py  impact.py  indexing.py  organizations.py  pr_review.py  proposed_changes.py  repositories.py  summary.py
apps/api/tests/: conftest.py  test_architecture.py  test_ask.py  test_ask_embeddings.py  test_auth.py  test_files_symbols.py  test_findings.py  test_full_flow.py  test_github_mock.py  test_impact.py  test_indexing.py  test_mock_ai_provider.py  test_organizations.py  test_parser.py  test_pr_review.py  test_proposed_changes.py  test_repositories.py  test_sse_job_events.py
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/worker/: Dockerfile  pyproject.toml  (+1 more)
docs/: architecture.md  setup.md
(+69 files in other folders)
